--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <title>Sneh's dumb website lol excdee</title>
-
+<title><img src="https://i.ytimg.com/vi/cjgaDjxVQc4/maxresdefault.jpg" ></img>Webnet</title>
 <!DOCTYPE html>
 <html>
 <head>
