--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <title>Sneh's dumb website lol excdee</title>
-<title><img src="https://i.ytimg.com/vi/cjgaDjxVQc4/maxresdefault.jpg" ></img>Webnet</title>
+<link rel="shortcut icon" href="/favicon.png" type="image/png">
+<link rel="shortcut icon" type="image/png" href="http://www.example.com/favicon.png" />
 <!DOCTYPE html>
 <html>
 <head>
