--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <title>Sneh's dumb website lol excdee</title>
-<link rel="shortcut icon" href="/favicon.png" type="image/png">
-<link rel="shortcut icon" type="image/png" href="http://www.example.com/favicon.png" />
+<!DOCTYPE html>
+<html>
+  <head>
+    <title> mytitle </title>
+    <link rel="icon" href="http://i58.tinypic.com/302rtyg.png" type="image/png">
 <!DOCTYPE html>
 <html>
 <head>
