--- a/index.html
+++ b/index.html
@@ -81,7 +81,14 @@ From making fun games to changing the world with coding, my love for coding will
 
 <a href="https://sneh12345.github.io/Updated-Trex-game-1/" class="w3-btn w3-black">One of my games(Updated-Trex-game-1) :)</a>
 
+<h3>Do Aliens Exist?</h3>
+  <p>Do Aliens Exist?
 
+
+“Do aliens exist?”, a question that has been on everyone’s minds for decades, that has yet to be answered. Although we do not 100% know that aliens do exist, some people think they do, just like me, and here are my reasons why. The first reason why I think aliens exist is because of the size of the universe. The universe that we live in is HUGE. So huge that it is 93 light years big (879,847,933,949,940 km)! Now, if you really think about it, the universe is huge, so there has to be at least one type of alien life out there. Second reason why I think aliens exist is because of the number of times we’ve seen UFO’s (Unidentified Flying Objects). At least several hundred thousand UFO sightings have been documented over the last 50+ years, happening all over the world, seen by millions of people. With that being said, let’s move on to my last reason on why I think Aliens exist. There are many planets in our universe, with 21.6 sextillion of them (23 zeros). So there has to be extraterrestrials living in at least one of them. Also, when I say aliens, it could be anything, from a little insect to big, smart, living things like us. Both us and aliens are small things compared with the universe, but we will find where they are, in just a matter of time
+
+
+</p>
 
 
 
