--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <title>Sneh's dumb website lol excdee</title>
+<link rel="shortcut icon" href="/favicon.png" type="image/png">
 <!DOCTYPE html>
 <html>
   <head>
