--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <title>Sneh's dumb website lol excdee</title>
-<link rel="shortcut icon" href="/favicon.png" type="image/png">
+<title><i class="icon-user icon-black">Sneh's dumb website lol excdee</i></title>
 <!DOCTYPE html>
 <html>
   <head>
