--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <title>Sneh's dumb website lol excdee</title>
-<title><i class="icon-user icon-black">Sneh's dumb website lol excdee</i></title>
+<link rel="shortcut icon" href="your_image_path_and_name.ico" />
 <!DOCTYPE html>
 <html>
   <head>
