--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
-<title>Sneh's dumb website lol excdee</title>
-<link rel="shortcut icon" href="your_image_path_and_name.ico" />
 <!DOCTYPE html>
+<title>Sneh's dumb website lol excdee</title>
+ PUBLIC "-//W3C//DTD HTML 4.01//EN"
+      "http://www.w3.org/TR/html4/strict.dtd">
+<html lang="en-US">
+<head profile="http://www.w3.org/2005/10/profile">
+<link rel="icon" 
+      type="image/png" 
+      href="http://example.com/myicon.png">
 <html>
   <head>
     <title> mytitle </title>
