--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <title>Sneh's dumb website lol excdee</title>
- PUBLIC "-//W3C//DTD HTML 4.01//EN"
-      "http://www.w3.org/TR/html4/strict.dtd">
-<html lang="en-US">
-<head profile="http://www.w3.org/2005/10/profile">
-<link rel="icon" 
-      type="image/png" 
-      href="http://example.com/myicon.png">
+ <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 <html>
   <head>
     <title> mytitle </title>
