--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <title>Sneh's dumb website lol excdee</title>
- <link rel="icon" href="favicon.ico" type="image/x-icon"/>
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+<link rel="shortcut icon"               
+   href="http://example.com/myicon.ico">
 <html>
   <head>
     <title> mytitle </title>
