--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <title>Sneh's dumb website lol excdee</title>
 <link rel="shortcut icon"               
-   href="http://example.com/myicon.ico">
+   href="favicon.ico">
 <html>
   <head>
     <title> mytitle </title>
