--- a/index.html
+++ b/index.html
@@ -105,4 +105,34 @@ In order for me to walk everyday, and to remember that I need to walk everyday, 
 Substitute
 Let’s say you haven’t got time to walk that day, you might be busy because you might be going to a party. So how do you walk that day? Well, you don’t. All you do is park far from your destination, for example park in a grocery store near the house, and then walk to the destination. </p>
 
+   
+   <div class="comment">
+<textarea id="title" type="text "rows="2" cols="4" onkeyup="Allow()" placeholder="write a comment......"></textarea>
+<input type="submit" value="Post" onclick="insert()" style="width:20px;" /></form>
+</div>
+<div id="display"></div>
+<script type="text/javascript">
+var titles = [];
+var titleInput = document.getElementById("title");
+var messageBox = document.getElementById("display");
+function Allow()
+{
+if (!user.title.value.match(/[a-zA-Z]$/) && user.title.value !="")
+{
+user.title.value="";
+alert("Please Enter only alphabets");
+}
+window.location.reload()
+}
+function insert () {
+titles.push(titleInput.value);
+clearAndShow();
+}
+function clearAndShow ()
+{
+titleInput.value = "";
+messageBox.innerHTML = "";
+messageBox.innerHTML += " " + titles.join("<br/> ") + "<br/>";
+}
+</script>
 
