--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ From making fun games to changing the world with coding, my love for coding will
 
 <h5>Write your comment here!</h5>
    
-   <div class="comment">
-<textarea id="title" type="text "rows="9" cols="69" onkeyup="Allow()" placeholder="Post a comment......"></textarea>
+  <div class="comment">
+<textarea id="title" type="text "rows="9" cols="69" onkeyup="Allow()" placeholder="write a comment......"></textarea>
 <input type="submit" value="Post" onclick="insert()" style="width:100px;" /></form>
 </div>
 <div id="display"></div>
@@ -120,7 +120,7 @@ titleInput.value = "";
 messageBox.innerHTML = "";
 messageBox.innerHTML += " " + titles.join("<br/> ") + "<br/>";
 }
-
+</script>
 
    
 
