--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <title>Sneh's dumb website lol excdee</title>
-<link rel="shortcut icon"               
-   href="favicon.ico">
+<link rel = "icon" href = "ezgif.com-gif-maker.png"> 
 <html>
   <head>
     <title> mytitle </title>
