--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <title>Sneh's dumb website lol excdee</title>
-<link rel = "icon" href = "ezgif.com-gif-maker.png"> 
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
 <html>
   <head>
     <title> mytitle </title>
-    <link rel="icon" href="http://i58.tinypic.com/302rtyg.png" type="image/png">
+    
 <!DOCTYPE html>
 <html>
 <head>
