--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="shortcut icon" type="image/x-icon" href="https://www.redditstatic.com/desktop2x/img/snoomoji/snoo_scream.png"/>
+<link rel="shortcut icon" type="https://www.redditstatic.com/desktop2x/img/snoomoji/partyparrot.gif"/>
 
 <html>
   <head>
