--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-
-
 <html>
   <head>
     <title> Sneh.com </title>
-     <link rel="shortcut icon" type="https://www.redditstatic.com/desktop2x/img/snoomoji/snoo_scream.png"/>
+     <link rel="icon" type="image/png" href="https://www.redditstatic.com/desktop2x/img/snoomoji/snoo_scream.png"/>
 <html>
 <head>
 
