--- a/index.html
+++ b/index.html
@@ -123,5 +123,5 @@ messageBox.innerHTML += " " + titles.join("<br/> ") + "<br/>";
 }
 </script>
 
-   
+   <a title="No machine-readable author provided. Fsolda~commonswiki assumed (based on copyright claims)., CC BY-SA 3.0 &lt;http://creativecommons.org/licenses/by-sa/3.0/&gt;, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Countries_receiving_snowfall.png"><img width="512" alt="Countries receiving snowfall" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Countries_receiving_snowfall.png/512px-Countries_receiving_snowfall.png"></a>
 
