--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title> Sneh.com </title>
-     <link rel="icon" type="image/png" href="https://www.redditstatic.com/desktop2x/img/snoomoji/snoo_scream.png"/>
+     <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/494604100474896396/773950842435928124/FB_IMG_1604463282432.jpg"/>
 <html>
 <head>
 
