--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   
   
   <h1>Sneh's favourite Hobbys</h1>
-<p>style="font-family:'Courier New'">When it comes to my favourite hobby, coding is my personal favourite. I’m relatively new to coding, with only 3 months of experience. But throughout my journey, I’ve really enjoyed it. First reason why I like coding is because it's super fun. Coding is fun because I can make all kinds of games, and apps. In my journey so far, I’ve created 1 game that is actually pretty hard, fun and big (big means it takes some time to beat, or it's infinite)! But, If you count all of my collections of games, including the small games, it skyrockets to a total of 9 games!  I’m also in the process of making my second game. The second reason why I like coding is because it’s going to help me find a job when I get older. Coding is a big thing in the future because it’s demand is super high, since everyone's lives revolve around their devices. So, there has to be someone to update, and make the device safer for the consumers. The average salary of a software engineer,at google, can vary from $144,000 to $550,000! Thirdly and lastly, the reason why 
+
+  <p style="font-family:'Courier New'">When it comes to my favourite hobby, coding is my personal favourite. I’m relatively new to coding, with only 3 months of experience. But throughout my journey, I’ve really enjoyed it. First reason why I like coding is because it's super fun. Coding is fun because I can make all kinds of games, and apps. In my journey so far, I’ve created 1 game that is actually pretty hard, fun and big (big means it takes some time to beat, or it's infinite)! But, If you count all of my collections of games, including the small games, it skyrockets to a total of 9 games!  I’m also in the process of making my second game. The second reason why I like coding is because it’s going to help me find a job when I get older. Coding is a big thing in the future because it’s demand is super high, since everyone's lives revolve around their devices. So, there has to be someone to update, and make the device safer for the consumers. The average salary of a software engineer,at google, can vary from $144,000 to $550,000! Thirdly and lastly, the reason why 
 I like coding because it can change the world for the better. Take gofundme™ for example. Gofundme is a website where you can donate money to people in need, people who don’t have enough money to host a funeral for a loved one and etc. Not only that, but the things below would not have been possible without code:
 Moon landing
 Scientific advancement 
@@ -29,8 +30,9 @@ Proper military defense system
 Satellites
 Navigation
 Calculators
-From making fun games to changing the world with coding, my love for coding will never go away! 
-</p>
+From making fun games to changing the world with coding, my love for coding will never go away! </p>
+  
+
 
 <h1>Sneh's second favourite hobby</h1>
 
